# psh

./: .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.llm  ARCHITECTURE.md  ARRAY_EXPANSION_SUMMARY.md  ARRAY_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CLAUDE.md  COMPLETED_WORK.md  DECLARE_IMPLEMENTATION_SUMMARY.md  DESIGN_DECISIONS.md  ENHANCED_LEXER_TESTING_STRATEGY.md  EXECUTOR_IMPROVEMENT_RECOMMENDATIONS.md  EXECUTOR_REFACTORING_PLAN.md  EXPANSION_REFACTORING_PLAN.md  IMPROVEMENT_RECOMMENDATIONS.md  LEXER_INTEGRATION_PLAN.md  LEXER_REFACTORING_PLAN.md  LEXER_REFACTORING_STATUS.md  LICENSE  MANIFEST.in  PARSER_ARCHITECTURE.md  PARSER_HIGH_PRIORITY_IMPLEMENTATION_PLAN.md  PARSER_IMPROVEMENT_SUGGESTIONS.md  PARSER_REFACTORING_PLAN.md  README.md  REFACTORING_RECOMMENDATIONS.md  RELEASE_NOTES.md  RELEASE_NOTES_0.28.4.md  RELEASE_NOTES_0.29.3.md  RELEASE_NOTES_0.29.4.md  RELEASE_NOTES_0.33.0.md  RELEASE_NOTES_0.34.0.md  RELEASE_NOTES_0.34.1.md  RELEASE_NOTES_0.35.1.md  RELEASE_NOTES_0.36.0.md  RELEASE_NOTES_v0.50.0.md  RELEASE_NOTES_v0.91.3.md  TODO.md  (+84 more)
conformance_tests/: bash_output.txt  psh_output.txt  psh_test_output.txt  run_conformance_tests.py  temp_test.sh
docs/: ARCHITECTURE_ROADMAP.md  BUGS_FOUND.md  DECLARE_ENHANCEMENT_PLAN.md  FEATURES_TODO.md  H3_investigation.md  LEXER_DIFFERENCES.md  MODULAR_LEXER_GUIDE.md  PHASE_C_SUMMARY.md  PTY_TESTING_GUIDE.md  VARIABLES_IMPLEMENTATION.md  advanced_read_builtin_plan.md  alias_expansion_analysis.md  alias_implementation_plan.md  alias_implementation_summary.md  architecture_recommendations.md  brace_expansion_architecture.md  (+101 more)
(+1248 files in other folders)
